<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/chalkboard"
    android:foreground="@drawable/ic_board"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingBottom="70dp">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/antallRiktige"
        android:textColor="@color/accentPrimary"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textAntallRiktige"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/rubik_bold"
        android:text=""
        android:textColor="@color/accentPrimary"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/antallGale"
        android:textColor="@color/accentPrimary"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textAntallGale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/rubik_bold"
        android:text=""
        android:textColor="@color/accentPrimary"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnSlettStatistikk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/textDark"
        android:drawableLeft="@drawable/ic_reset"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/nullstill"
        android:textColor="@color/accentPrimary" />

    <Button
        android:id="@+id/btnTilbake"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/accentPrimary"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/tilbake"
        android:textAllCaps="false"
        android:textColor="@color/textDark"
        android:textSize="18sp"
        android:typeface="normal"
        app:cornerRadius="10dp"
        app:strokeColor="@color/textDark"
        tools:ignore="TextContrastCheck" />


</LinearLayout>



