<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/chalkboard"
    android:foreground="@drawable/ic_board"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="70dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/calculator" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/tittel"
            android:textColor="@color/accentPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btnStartSpill"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/accentPrimary"
        android:fontFamily="@font/rubik_bold"
        android:onClick="onClick"
        android:text="@string/start_spill"
        android:textAllCaps="false"
        android:textColor="@color/textDark"
        android:textSize="18sp"
        android:typeface="normal"
        app:cornerRadius="10dp"
        app:strokeColor="@color/textDark"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnSeStatistikk"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/textDark"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/se_statistikk"
        android:textAllCaps="false"
        android:textColor="@color/accentPrimary"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:strokeColor="@color/textDark" />

    <Button
        android:id="@+id/btnPreferanser"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/textDark"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/preferanser"
        android:textAllCaps="false"
        android:textColor="@color/accentPrimary"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:strokeColor="@color/textDark" />

</LinearLayout>



