<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/chalkboard"
    android:foreground="@drawable/ic_board"
    android:orientation="vertical"
    android:gravity="bottom"
    android:paddingBottom="70dp">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/rubik_bold"
        android:gravity="center"
        android:text="@string/antallSpors"
        android:textColor="@color/accentPrimary"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textSporsmalTall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/accentPrimary"
        android:textSize="30sp"
        android:fontFamily="@font/rubik_bold"
        android:text="" />

    <Button
        android:id="@+id/btnSpill"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/accentPrimary"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/start_spill"
        android:textAllCaps="false"
        android:textColor="@color/textDark"
        android:textSize="18sp"
        android:typeface="normal"
        app:cornerRadius="10dp"
        app:strokeColor="@color/textDark"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnTilbake"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/textDark"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/tilbake"
        android:textAllCaps="false"
        android:textColor="@color/accentPrimary"
        android:textSize="18sp"
        android:typeface="normal"
        app:cornerRadius="10dp"
        app:strokeColor="@color/textDark"
        tools:ignore="TextContrastCheck" />


</LinearLayout>



